compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_literal_float.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1335
expression: "\npub fn go(x) {\n  let assert <<1.4, b:int>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<1.4, b:int>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let b;
  if (
    x.bitSize >= 64 &&
    bitArraySliceToFloat(x, 0, 64, true) === 1.4 &&
    x.bitSize === 72
  ) {
    b = x.byteAt(8);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 47, pattern_start: 29, pattern_end: 43 }
    )
  }
  return x;
}
