compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_rest_bytes.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1512
expression: "\npub fn go(x) {\n  let assert <<_, b:bytes>> = <<1,2,3>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<_, b:bytes>> = <<1,2,3>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray, bitArraySlice } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let $ = toBitArray([1, 2, 3]);
  let b;
  if ($.bitSize >= 8 && ($.bitSize - 8) % 8 === 0) {
    b = bitArraySlice($, 8);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 18, end: 55, pattern_start: 29, pattern_end: 43 }
    )
  }
  return $;
}
